# sql-test-kit-example

./: .gitignore  pyproject.toml
sql_test_kit_example/: compute_sales.py  covid_increase.py
test/: test_compute_sales.py  test_covid_increase.py
